src/test/resources/amyc/parser/failing/ValError.grading.amy
object Val
  val x = 42; x
end Val
